--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div class="container">
 			<h1>Adam Mickiewicz</h1>
 			<h2>Pan Tadeusz<br>Czyli ostatni zajazd na Litwę</h2>
+			<h3>GitBash</h3>
 				<div class="text">
 					<p>Litwo! Ojczyzno moja! ty jesteś jak zdrowie.<br>
 
